cros: Defer setOverlayColors call as login/lock may not be loaded yet.

Bug: 764584
Change-Id: I359240427c6be20a2576142a7caf8cc12d897edc
Reviewed-on: https://chromium-review.googlesource.com/669397
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502373}
Former-commit-id: 9c2e2f0e0dfe002eb0a1325c100ffbe2dd0de21d